footer spacing fix

--- a/styles/temples.css
+++ b/styles/temples.css
@@ -131,4 +131,5 @@ footer {
     color: white;
     font-size: 1.2rem;
     text-align: center;
+    padding: 1rem;
 }
